fix: unwrap toggle button and text in phone mode

--- a/scss/_off.scss
+++ b/scss/_off.scss
@@ -606,6 +606,14 @@ ul.pagination li a {
   }
 }
 
+@media #{$small-only} {
+  .toggle_food_preferences {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+}
+
 .close_food_preferences {
   margin-bottom: 1rem;
 }
